Sayang Syahir Sgt2

--- a/app/src/main/res/layout/jobposted.xml
+++ b/app/src/main/res/layout/jobposted.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,11 +8,15 @@
         android:id="@+id/parentRequestCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="#E9E9E9"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="7dp"
             android:orientation="vertical">
 
             <TextView
@@ -37,7 +42,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="When: 12/09/19, 8.00 pm"
+                android:text="Date Start: 12/09/19"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/background_dark" />
+
+
+            <TextView
+                android:id="@+id/jPSession"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Session: Monday, 8.00pm - 10.00pm"
                 android:textAlignment="textStart"
                 android:textColor="@android:color/background_dark" />
 
