--- a/app/src/main/res/layout/joblistcard.xml
+++ b/app/src/main/res/layout/joblistcard.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/TutorJobList"
+        android:id="@+id/parentViewApplications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="#D7E7F2"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -25,6 +31,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Ahmad Syahir "
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -40,12 +47,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="224dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
+                    android:layout_weight="0.5"
                     android:orientation="vertical">
 
                     <TextView
@@ -73,29 +82,40 @@
                         android:id="@+id/datetxt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="12/09/19, 8.00 pm"
+                        android:text="Date Start: 12/09/19"
                         android:textColor="@android:color/background_dark" />
 
+
                     <TextView
-                        android:id="@+id/loctxt"
+                        android:id="@+id/sessiontxt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Location: {Parent's Address}"
+                        android:text="Session: Monday, 8.00pm - 10.00pm"
                         android:textColor="@android:color/background_dark" />
+
+
+                    <TextView
+                        android:id="@+id/addresstxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Address: {Parent Address}"
+                        android:textColor="@android:color/background_dark" />
+
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="0.9"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <Button
                         android:id="@+id/contactParentbtn"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_margin="5dp"
-                        android:layout_weight="1"
                         android:background="#5A5AD0"
                         android:text="Contact Parent"
                         android:textColor="@android:color/background_light" />
@@ -103,13 +123,13 @@
                     <Button
                         android:id="@+id/applybtn"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_margin="5dp"
-                        android:layout_weight="1"
                         android:background="#5A5AD0"
                         android:text="Apply"
                         android:textColor="@android:color/background_light" />
                 </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
