--- a/app/src/main/res/layout/jobpostedviewapp.xml
+++ b/app/src/main/res/layout/jobpostedviewapp.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,11 +8,15 @@
         android:id="@+id/parentViewApplications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="#E9E9E9"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="7dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -74,6 +79,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="0.7"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <Button
@@ -95,7 +102,9 @@
                         android:background="#5A5AD0"
                         android:text="Hire"
                         android:textColor="@android:color/background_light" />
+
                 </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
