--- a/app/src/main/res/layout/layout_button_list_child.xml
+++ b/app/src/main/res/layout/layout_button_list_child.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,11 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        style="@style/MyCardViewStyle">
+        app:cardBackgroundColor="#F0CACA"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="7dp"
             android:orientation="vertical">
 
             <TextView
@@ -29,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Subject: Mathematics"
+                android:text="Standard: 5"
                 android:textAlignment="textStart"
                 android:textColor="@android:color/background_dark" />
 
