--- a/app/src/main/res/layout/tutor_job_app_reject.xml
+++ b/app/src/main/res/layout/tutor_job_app_reject.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,11 +8,15 @@
         android:id="@+id/TutorJobList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="#D7E7F2"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="7dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -25,6 +30,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Ahmad Syahir "
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
