--- a/app/src/main/res/layout/seesion_week_entries_card.xml
+++ b/app/src/main/res/layout/seesion_week_entries_card.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
-        android:background="#AED6F1"
+        android:background="#BAE3FF"
         android:orientation="vertical">
 
         <TextView
@@ -22,6 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
@@ -31,7 +32,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:text="Day:"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/background_dark"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -46,6 +47,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
@@ -56,7 +58,7 @@
                 android:layout_weight="3"
                 android:gravity="center_vertical"
                 android:text="Start Time:"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/background_dark"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -73,6 +75,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
@@ -83,7 +86,7 @@
                 android:layout_weight="3"
                 android:gravity="center_vertical"
                 android:text="End Time:"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/background_dark"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
