--- a/app/src/main/res/layout/activity_sign_up_tutor_qualifications.xml
+++ b/app/src/main/res/layout/activity_sign_up_tutor_qualifications.xml
@@ -75,7 +75,7 @@
                 android:paddingBottom="10dp">
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Qualification"
