--- a/app/src/main/res/layout/activity_tutor_income_earned.xml
+++ b/app/src/main/res/layout/activity_tutor_income_earned.xml
@@ -37,58 +37,67 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ScrollView
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="50dp">
-
-            <TextView
-                android:id="@+id/paymenttxt"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#808080"
-                android:padding="50dp"
-                android:text="RM 1050.00"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </android.support.v7.widget.CardView>
-
-        <TextView
-            android:id="@+id/textView14"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="30dp"
-            android:text="Reminder: For the income\ntransfer process, it would take\nup to 14 days from remittance\ndate."
-            android:textAlignment="center"
-            android:textColor="@android:color/black" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-            <Button
-                android:id="@+id/debitCardbtn"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="70dp"
-                android:layout_weight="1"
-                android:background="#5A5AD0"
-                android:text="Withdraw the Cash"
-                android:textColor="@android:color/white" />
-        </LinearLayout>
+                android:layout_margin="50dp">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/paymenttxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#808080"
+                    android:padding="50dp"
+                    android:text="RM 1050.00"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="30dp"
+                android:text="Reminder: For the income\ntransfer process, it would take\nup to 14 days from remittance\ndate."
+                android:textAlignment="center"
+                android:textColor="@android:color/black" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/debitCardbtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="40dp"
+                    android:layout_weight="1"
+                    android:background="#5A5AD0"
+                    android:text="Withdraw the Cash"
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
