--- a/app/src/main/res/layout/activity_job_history_ended.xml
+++ b/app/src/main/res/layout/activity_job_history_ended.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <Button
-            android:id="@+id/ongoingbtn"
+            android:id="@+id/ongoingbtnH"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -84,7 +84,7 @@
             android:layout_margin="15dp">
 
             <LinearLayout
-                android:id="@+id/jobHistoryLL"
+                android:id="@+id/jobHistoryLLEnded"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -93,7 +93,8 @@
                     android:id="@+id/parentViewApplications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
