--- a/app/src/main/res/layout/activity_job_history_primary.xml
+++ b/app/src/main/res/layout/activity_job_history_primary.xml
@@ -57,7 +57,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/endedbtn"
+            android:id="@+id/endedbtnH"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -90,7 +90,8 @@
                     android:id="@+id/parentViewApplications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
